name:                persistent-history
version:             0.0.0.2
synopsis:            (experimental) TH functions to generate revision history models for a persistent schema
description:         -
license:             MIT
author:              Sabine Schmaltz
category:            Database,Persistent
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   History
                     , History.TH
                     , History.Types
  hs-source-dirs:    src
  build-depends:     base >=4.8 && <5.0
                     , aeson
                     , persistent
                     , template-haskell
                     , time
                     , text
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:      test
                     , src
  other-modules:     History
                     , History.Types
                     , History.TH
                     , History.HistorySpec
  build-depends:       base >=4.8 && <5.0
                     , hspec
                     , aeson
                     , exceptions
                     , persistent
                     , persistent-template
                     , QuickCheck
                     , template-haskell
                     , time
                     , text
                     , mockery
  default-language:    Haskell2010
